<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_view"
        android:layout_width="406dp"
        android:layout_height="39dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_view"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="306dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icons_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icons_lock"
        android:drawableEnd="@drawable/icon_eye_slash"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uemail_et"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:text="@string/forgotpass"
        android:textAllCaps="false"
        android:textColor="@color/main_purple"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:layout_gravity="center"
        android:background="@drawable/btn1"
        android:backgroundTint="@color/main_purple"
        android:text="@string/buttonLogin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp">

        <TextView
            android:id="@+id/accountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/accountView"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signupView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/signupView"
            android:textAllCaps="false"
            android:textColor="@color/main_purple"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>